--- a/test.html
+++ b/test.html
@@ -8,18 +8,9 @@
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="/images/claire/Neutral.png">
-        <link rel="icon" href="/images/yoki/Dizzy.png"></link>
+        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
+        <link rel="icon" href="/images/spax/Dizzy.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="jquery.countdown.min.js"></script>
-        <script>
-            $('#ominous-countdown')
-            .countdown("2022/03/06", function(event) {
-                $(this).text(
-                    event.strftime('%D:%H:%M:%S')
-                );
-            });
-        </script>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,70 +21,86 @@
 
     </head>
     <body>
-        <p class="alt-text-box">
-            <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
-        </p>
-        <p class="text-box">
-                <!--<img src="
-            images/claire/Neutral.png
-                "></img>-->
-            Hey nerds. It's me, Claire.
-        </p>
-        <p class="text-box">
+        <div class="alt-text-box flex-container">
+            <div>
+                <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/claire/Neutral.png
+                    "></img>
+                Hey nerds. It's me, Claire.
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/claire/Happy.png
+                    "></img>
+                I am now on a poggers website. Woo!
+            </div>
+        </div class="text-box flex-container">
+        <div class="text-box flex-container">
+            <div>
                 <img src="
-            images/claire/Happy.png
+            images/claire/Sigh.png
                 "></img>
-            I am now on a poggers website. Woo!</p>
-        <p class="text-box">
+            Anyways it's time for some fucking debugging.
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
                 <img src="
-            images/claire/Look.png
+            images/aimottle/Unsure.png
                 "></img>
-            Sadly it's Spax's...</p>
-        <p class="text-box">
-            <img src="
-        images/claire/Sigh.png
-            "></img>
-        Anyways it's time for some fucking debugging.</p>
-        <p class="text-box">
-            <img src="
-        images/aimottle/Unsure.png
-            "></img>
-        Spax, you don't know what you're doing at all, do you?</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Worried.png
-            "></img>
-        Well no... but-</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Worried.png
-            "></img>
-        ...</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Pensive.png
-            "></img>
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p class="text-box">
-            <img src="
-        images/yoki/Sweat_Drop.png
-            "></img>
-        (Where the <i>fuck</i> am I?!)
-        </p>
-        <div class="ominous-countdown"></div>
-        </p>
+            Spax, you don't know what you're doing at all, do you?
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Worried.png
+                "></img>
+            Well no... but-
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Worried.png
+                "></img>
+            ...
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Pensive.png
+                "></img>
+            </div>
+        </div>
+        <div>
+            <div class="text-box flex-container">
+                <div>
+                    <img src="
+                images/yoki/Sweat_Drop.png
+                    "></img>
+                (Where the <i>fuck</i> am I?!)
+                </div>
+            </div>
+        </div>
+        <div class="text-box flex-container" id="ominous-countdown">
+        The Final Countdown:tm:
+        </div>
+        <script src="jquery.countdown.min.js">
+            $('#ominous-countdown')
+            .countdown("2022/03/06", function(event) {
+                $(this).text(
+                    event.strftime('%D:%H:%M:%S')
+                );
+            });
+        </script>
     </body>
 </html>
