--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         </div>
         <div class="text-box flex-container"  id="ominous-countdown"></div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script></body>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
         <script>
             $('#ominous-countdown')
@@ -104,5 +104,5 @@
                 );
             });
         </script>
-
+    </body>
 </html>
