--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -42,7 +42,7 @@
         <div class="text-box flex-container">
             <div>
                     <img src="
-                images/Yoki/Upset.png
+                images/yoki/Upset.png
                     "></img>
                 You went too far this time.
             </div> 
