--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
-        <link rel="icon" href="/images/spax/Dizzy.png"></link>
+        <link rel="icon" href="Smirk_Circle.png"></link>
         
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -88,6 +88,8 @@
             (Where the <i>fuck</i> am I?!)
             </div>
         </div>
+        <!--
+        //this works; don't fucking touch it kiddo
         <div class="text-box flex-container"  id="ominous-countdown"></div>
         </div>
         <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script>
@@ -101,6 +103,6 @@
                     event.strftime('%D:%H:%M:%S')
                 );
             });
-        </script>
+        </script>-->
     </body>
 </html>
