--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="Take this fun and quirky quiz to see how well you know me! (Or some shit.)">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
-        <link rel="icon" href="/images/spax/Smirk.png"></link>
+        <link rel="icon" href="Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
         <!--<script>
