added titles and shit

--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -12,6 +12,7 @@
         <link rel="icon" href="Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
+        <title>Is Spax At School?</title>
         <!--<script>
             $('#ominous-countdown')
             .countdown("2022/03/06", function(event) {
