--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -12,6 +12,8 @@
         <link rel="icon" href="/images/claire/Mad.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
+        <title>SHUR UP RANGAK</title>
+        <!--NOTE: Thosea typos are on purpose. I know it's supposed to say "SHUT UP RANGAL" but the typos are funnier imo-->
         <!--<script>
             $('#ominous-countdown')
             .countdown("2022/03/06", function(event) {
