updated formatting but smth broke and I'll deal with it later

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <body>
         <div class="alt-text-box flex-container">
             <div>
-                <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
+                <a href="isspaxatschool.html">Click here</a> to see if I'm at school!<br>
+                <span style="color:red;">Also Mathew if you're looking at the site please help me out I need to fix the window resizing offsetting incorrectly thing. Resizing the window horizontally makes the space on the left side of the text boxes bigger than the right side and I don't know how to fix it. Look at the css. Might have something to do with the margins.<br>
+                -Spax</span>
             </div>
         </div>
         <div class="text-box flex-container">
