--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -13,15 +13,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
         <title>Is Spax At School?</title>
-        <!--<script>
-            $('#ominous-countdown')
-            .countdown("2022/03/06", function(event) {
-                $(this).text(
-                    event.strftime('%D:%H:%M:%S')
-                );
-            });
-        </script>-->
-
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -37,7 +28,7 @@
                     <img src="
                 images/spax/Smirk.png
                     "></img>
-                This text should be replaced by the js.
+                This text should be replaced by the js. If you're seeing this, it means that my code is broken :<
             </div>
         </div>
         <script>
