--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
         <div class="alt-text-box flex-container">
             <div>
-                <a href="isspaxatschool.html">Click here</a> to see if I'm at school!<br>
+                <a href="sitelist.html">Click here</a> to see my full site list!<br>
                 -Spax</span>
             </div>
         </div>
