added the plannedchanges.html page

--- a/sitelist.html
+++ b/sitelist.html
@@ -68,6 +68,12 @@
         </div>
         <div class="text-box flex-container">
             <div>
+            <a href=plannedchanges.html>Planned Changes</a><br>
+            Here I'll try to do weekly updates to what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
             <a href=rangalshutthehellup.html>Shut the HELL up Rangal</a><br>
             I made this page for whenever a person in the DEP discord server says something edgy, horny, controversial, etc. Meant to be lighthearted and Rangal knows it's a joke. We all good.
             </div>
