--- a/sitelist.html
+++ b/sitelist.html
@@ -69,7 +69,7 @@
         <div class="text-box flex-container">
             <div>
             <a href=plannedchanges.html>Planned Changes</a><br>
-            Here I'll try to do weekly updates to what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
+            Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
             </div>
         </div>
         <div class="text-box flex-container">
