--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -191,5 +191,13 @@
                 Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="github.com/SpiritAxolotl/spiritaxolotl.github.io">github repo</a>, so you can see the history there. 
             </div>
         </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/spax/Happy.png
+                    "></img>
+                Cya! 
+            </div>
+        </div>
     </body>
 </html>
