--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -63,17 +63,17 @@
                 } else {
                     document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I'm not in school right now!";
                 }
-            } else if (d.getDay()==5) {
-                if(((d.getHours()==(6+diff))&&(d.getMinutes()>=30)||d.getHours()>=(7+diff))&&((d.getHours()==(10+diff))&&(d.getMinutes()<=30))||(d.getHours()<=(9+diff))){
+            } else if (f==5) {
+                if(m>390&&m<630){
                     document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I'm currently in school right now!";
-                } else if (((d.getHours()==(19-diff))&&(d.getMinutes()>=(29))||(d.getHours()>=(23-diff)))||((d.getHours()==(0-diff))&&(d.getMinutes()>=(29))||(d.getHours()<=(5-diff)))) {
+                } else if (m>1170||m<330) {
                     //sleeping html
                     document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I may not be in school right now, but I'm probably asleep. But don't let that stop you from DMing me!";
                 } else {
                     document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I'm not in school right now!";
                 }
-            } else if (d.getDay()==6||d.getDay()==0) {
-                if (((d.getHours()==(19-diff))&&(d.getMinutes()>=(29))||(d.getHours()>=(23-diff)))||((d.getHours()==(0-diff))&&(d.getMinutes()>=(29))||(d.getHours()<=(5-diff)))) {
+            } else if (f==6||f==0) {
+                if (m>1170||m<330) {
                     //sleeping html
                     document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I may not be in school right now, but I'm probably asleep. But don't let that stop you from DMing me!";
                 } else {
