--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -26,7 +26,7 @@
         <div class="text-box flex-container">
             <div>
                     <img src="
-                images/spax/Smirk.png
+                images/spax/Worried.png
                     "></img>
                 This text should be replaced by the js. If you're seeing this, it means that my code is broken :<
             </div>
