--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div class="text-box flex-container">
-            <div>
+            <div id="date">
                     <img src="
                 images/spax/Worried.png
                     "></img>
@@ -33,17 +33,17 @@
         </div>
         <script>
             const d = new Date();
-            const m
-            const f
+            const m;
+            const f;
             if ((d.getUTCHours()-7)<0){
                 m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes()
                 if ((d.getUTCDay()-1)<0){
                     f = 6+d.getUTCDay()-1
-                }
+                };
             } else {
                 m = ((d.getUTCHours()-7)*60)+d.getUTCMinutes()
                 f = d.getUTCDay()
-            }
+            };
             //if during mon-thurs (school days)
             if ((f==1||f==2||f==3||f==4)) {
                 //if time is between 7:30 and 2:30 (school hours)
@@ -81,5 +81,6 @@
                 }
             }
         </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </body>
 </html>
