--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -33,8 +33,8 @@
         </div>
         <script>
             const d = new Date();
-            const m;
-            const f;
+            const m = 0;
+            const f = 0;
             if ((d.getUTCHours()-7)<0){
                 m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes()
                 if ((d.getUTCDay()-1)<0){
