--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -92,7 +92,15 @@
                     <img src="
                 images/spax/Look.png
                     "></img>
-                I need to fix the Javascript on that page. It currently only works on the weekends. There's some sort of bug in either the way that I've formatted the code or just the code in general. Might have to use a slightly more reliable system for that... but that's for future me to deal with!
+                <s>I need to fix the Javascript on that page. It currently only works on the weekends. There's some sort of bug in either the way that I've formatted the code or just the code in general. Might have to use a slightly more reliable system for that... but that's for future me to deal with!</s><br>
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/spax/Blush.png
+                    "></img>
+                UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.
             </div>
         </div>
         <div class="text-box flex-container">
