--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -97,7 +97,11 @@
             } else if (f==6||f==0) {
                 if (m>=1170||m<330) {
                     //sleeping html
-                    document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I may not be in school right now, but I'm probably asleep. But don't let that stop you from DMing me!";
+                    if (m>=270){
+                    document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I may not be in school right now (it's literally the weekend), but I'm probably asleep. But don't let that stop you from DMing me! But I'll be awake in about "+(60-cm)+" minutes!";
+                    } else {
+                    document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I may not be in school right now (it's literally the weekend), but I'm probably asleep. But don't let that stop you from DMing me! But I'll be awake in about "+(5-ch)+" hours and "+(60-cm)+" minutes!";
+                    }
                 } else {
                 document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I'm not in school! (It's literally the weekend bro.)";
                 }
