--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <div class="alt-text-box flex-container">
+        <div class="text-box flex-container">
             <div>
                 <a href="sitelist.html">Click here</a> to see my full site list!<br>
                 -Spax</span>
