--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -31,6 +31,11 @@
                 This text should be replaced by the js. If you're seeing this, it means that my code is broken :<
             </div>
         </div>
+        <div class="text-box flex-container">
+            <div>
+                (And <a href="index.html">click here</a> to go back to the main page!)
+            </div>
+        </div>
         <script>
             const d = new Date();
             const ch = d.getUTCHours()-7;
