--- a/index.html
+++ b/index.html
@@ -95,39 +95,36 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/aimottle/Neutral.png
+                "></img>
+                HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/claire/Aghast.png
+                "></img>
+                How tf-
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Dizzy.png
+                "></img>
+                I have no clue how I did it I'm so tired now
+            </div>
+        </div>
         <div class="text-box flex-container">
             <div>
                 <img src="
             images/yoki/Sweat_Drop.png
                 "></img>
-            (Where the <i>fuck</i> am I?!)
+            (I still don't know where the <i>fuck</i> I am-)
             </div>
         </div>
         <!--
