--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -42,9 +42,34 @@
             const cm = d.getUTCMinutes();
             const m = ((d.getUTCHours()-7)*60)+d.getUTCMinutes();
             const f = d.getUTCDay();
-            setInterval(time, 1000)
+            const t = 1;
+
+            if ((d.getUTCHours()-7)<0){
+                    let m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes();
+                    let ch = 23+d.getUTCHours()-7;
+                    let cm = d.getUTCMinutes();
+                    if ((d.getUTCDay()-1)<0){
+                        let f = 6+d.getUTCDay()-1;
+                    };
+                } else {
+                    let m = ((d.getUTCHours()-7)*60)+d.getUTCMinutes();
+                    let f = d.getUTCDay();
+                    let ch = d.getUTCHours()-7;
+                    let cm = d.getUTCMinutes();
+                };
+            
+            setInterval(doThing, 30000)
+            function doThing(){
+                if(t==1){
+                    setInterval(time, 60000)
+                    let t = 0
+                } else {
+                    let t = 1
+                }
+            }
+            
             function time(){
-                if ((d.getUTCHours()-7)<0){
+            if ((d.getUTCHours()-7)<0){
                     let m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes();
                     let ch = 23+d.getUTCHours()-7;
                     let cm = d.getUTCMinutes();
@@ -116,7 +141,7 @@
                 document.getElementById("date").innerHTML = "<img src='images/spax/Smirk.png'></img> Yo! I'm not in school! (It's literally the weekend bro.)";
                 }
             }
-            }
+        }
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </body>
