--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -44,34 +44,12 @@
             const f = d.getUTCDay();
 
             time();
+            convertTime();
             setInterval(time, 1000)
             setInterval(convertTime, 500)
             
-            /*if ((d.getUTCHours()-7)<0){
-                    let m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes();
-                    let ch = 23+d.getUTCHours()-7;
-                    let cm = d.getUTCMinutes();
-                    if ((d.getUTCDay()-1)<0){
-                        let f = 6+d.getUTCDay()-1;
-                    };
-                } else {
-                    let m = ((d.getUTCHours()-7)*60)+d.getUTCMinutes();
-                    let f = d.getUTCDay();
-                    let ch = d.getUTCHours()-7;
-                    let cm = d.getUTCMinutes();
-                };
-            
-            setInterval(doThing, 30000)
-            function doThing(){
-                if(t==1){
-                    setInterval(time, 60000)
-                    let t = 0
-                } else {
-                    let t = 1
-                }
-            }*/
             function convertTime(){
-            let d = new Date();
+            let d = Date();
             if ((d.getUTCHours()-7)<0){
                     let m = ((23+(d.getUTCHours()-7))*60)+d.getUTCMinutes();
                     let ch = 23+d.getUTCHours()-7;
