--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -24,6 +24,13 @@
     </head>
     <body>
         <div class="text-box flex-container">
+            <div style="color:red;">
+                (Note for Mathew:)<br>
+                (I want the text to refresh every minute. It currently refreshes, but I can't figure out why it won't update the time correctly.)<br>
+                -Spax
+            </div>
+        </div>
+        <div class="text-box flex-container">
             <div id="date">
                     <img src="
                 images/spax/Worried.png
