--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -207,5 +207,10 @@
                 Cya! 
             </div>
         </div>
+        <div class="text-box flex-container">
+            <div>
+                (<a href="index.html">Click here</a> to go back to the main page!)
+            </div>
+        </div>
     </body>
 </html>
